tests/semantic/invalid/47_i1_inheritance_cycle.hulk
type A inherits B {}

type B inherits A {}
